--- a/stylesheets/login-screen.css
+++ b/stylesheets/login-screen.css
@@ -3,8 +3,8 @@
 #loginScreen {
   display: flex;
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   justify-content: center;
   align-items: center;
   background-color: #000;
